<resources>
    <string name="back4app_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">D5M7wQOFayY4X5lX12EjEEWwADQ9c8tyDnMPPL99</string>
    <string name="back4app_client_key">Ka5DbS3OpPlozyFx8x0MVuysloTynRQQa2iv9pfy</string>
    <string name="google_client_id">171418450323-nut2qa3hgbe59mtinldh6kne8ejevr3n.apps.googleusercontent.com</string>

    <string name="app_name">CimeriApp</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Login">Log in</string>
    <string name="ForgotPass">Forgot password?</string>
    <string name="HaveAcc">Don\'t have an account? Register here!</string>
    <string name="LoginGoogle">Log in with Google</string>
    <string name="LoginFacebook">Log in with Facebook</string>
    <string name="ConfirmPassword">Confirm your password</string>
    <string name="Register">Register</string>
    <string name="FullName">Full name</string>
    <string name="invalidEmail">Invalid email. Please try again.</string>
    <string name="collisionEmail">User with the provided email already exists.</string>
    <string name="emailExists">A user with the provided email already exists.</string>
    <string name="passwordReq">Password must contain at least 8 characters, and at least one uppercase letter.</string>
    <string name="passwordMatch">Passwords don\'t match.</string>
    <string name="invalidFullName">Please provide your full name.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="home_page">Home page</string>
    <string name="contacts">Contacts</string>
    <string name="app_label">app label</string>
    <string name="search_hint">search hint</string>
    <string name="title_activity_exmp">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_post">Post</string>
    <string name="take_photo">take photo</string>
    <string name="first_name">First name:</string>
    <string name="nick_name">Nickname</string>
    <string name="textview">TextView</string>
    <string name="wrong_comb">Wrong email or password.</string>
    <string name="emailReqLogin">Please enter your email.</string>
    <string name="passReqLogin">Please enter your password.</string>


    <!-- FRAGMENT POST  -->
    <string name="address">Address</string>
    <string name="price_per_month">Price per month</string>
    <string name="smoker_friendly">Smoker friendly?</string>
    <string name="pet_friendly">Pet friendly?</string>
    <string name="no_photos">No photos uploaded.</string>
    <string name="upload_photo_post">Upload photo</string>

    <string name="add_photo">Add photo</string>
    <string name="pop_up">Pop-Up</string>
    <string name="close">close</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>


    <string-array name="room_num_array">
        <item>Garsonjera</item>
        <item>1 room</item>
        <item>2 rooms</item>
        <item>3 rooms</item>
        <item>4 rooms</item>
        <item>5 rooms or more</item>
    </string-array>

    <string-array name="currency_array">
        <item>EUR</item>
        <item>RSD</item>
    </string-array>




</resources>
