<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_linear"
    tools:context=".activities.LoginActivity">

    <Button
        android:background="@drawable/rounded_button"
        android:layout_height="50dp"
        android:id="@+id/loginGoogle"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:text="@string/LoginGoogle"/>

    <Button
        android:background="@drawable/rounded_button"
        android:layout_height="50dp"
        android:id="@+id/loginFacebook"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/LoginFacebook"/>

    <EditText
        android:padding="3dp"
        android:id="@+id/loginEmail"
        android:background="@drawable/rounded_elements"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:hint="@string/Email"
        />

    <EditText
        android:padding="3dp"
        android:background="@drawable/rounded_elements"
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:hint="@string/Password"
        />


    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/ForgotPass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/rounded_button"
            android:layout_height="50dp"
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:onClick="onClick"
            android:text="@string/Login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HaveAcc" />

    </LinearLayout>




</LinearLayout>
