<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.PostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/cardview_shadow_end_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/fragmentPostAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_elements"
                    android:hint="@string/address"
                    android:padding="2dp"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/num_of_rooms_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/pricePerMonth"
                        android:layout_width="235dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_elements"
                        android:hint="@string/price_per_month"
                        android:inputType="number"
                        android:padding="3dp"
                        android:singleLine="true" />

                    <Spinner
                        android:id="@+id/currency_spinner"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginLeft="26dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/contactPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_elements"
                    android:hint="@string/address"
                    android:padding="2dp"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <CheckBox
                        android:id="@+id/smoker_friendly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoker_friendly" />

                    <CheckBox
                        android:id="@+id/pet_friendly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/pet_friendly" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/cardview_shadow_end_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_photos"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="50dp"
                />



        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/uploadPhotoButtonPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/upload_photo_post" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>




